Added redux dependencies.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "chess": "^0.2.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-redux": "^5.0.5",
+    "react-scripts": "1.0.10",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +18,8 @@
   },
   "engines": {
     "node": "7.9.0"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.0"
   }
 }
